Fix Size Portoflio on Mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -413,6 +413,10 @@ footer {
         color: white;
     }
 
+    .experience {
+        height: 260vh;
+    }
+
     footer {
         padding: 10px 50px;
     }
